--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -7,52 +7,54 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:wght@700&display=swap"
+    rel="stylesheet">
   <title>VaultWise</title>
 </head>
+
 <body>
-<section class="um">
-  <div class="fundo">
-    <header> 
+  <section class="um">
+    <div class="fundo">
+      <header>
 
-      <!--Class exclusiva pra a a logo-->
-      <div class="logo">
-        <img src="css/imagens/logosemfundo.png" alt="">
+        <!--Class exclusiva pra a a logo-->
+        <div class="logo">
+          <img src="css/imagens/logosemfundo.png" alt="">
+        </div>
+        <!--Class que guarda as opções de botôes do header-->
+        <nav>
+          <ul>
+            <li>
+              <a href="" class="ativo">Home</a>
+            </li>
+            <li>
+              <a href="">Sobre Nós</a>
+            </li>
+            <li>
+              <a href="">Contato</a>
+            </li>
+            <li>
+              <a href="">Equipe</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <div class="container">
+        <div class="titulo">
+          <h1>VaultWise</h1>
+          <div class="texto1">
+            A VaultWIse é líder em soluções de gerenciamento de ATMs, oferecendo serviços inovadores e confiáveis para
+            garantir o máximo desempenho e segurança de suas operações. Com uma abordagem centrada no cliente e
+            tecnologia de ponta, a VaultWIse otimiza a gestão de caixas eletrônicos, assegurando disponibilidade
+            contínua e eficiência operacional.
+          </div>
+        </div>
+        <div class="texto2">
+          <img src="css/imagens/atmpng.png" alt="">
+        </div>
       </div>
-      <!--Class que guarda as opções de botôes do header-->
-      <nav>
-        <ul>
-          <li>
-            <a href="" class="ativo">Home</a>
-          </li>
-          <li>
-            <a href="">Sobre Nós</a>
-          </li>
-          <li>
-            <a href="">Contato</a>
-          </li>
-          <li>
-            <a href="">Equipe</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <div class="container">
-      <div class="titulo">
-        <h1>VaultWise</h1>
-        <div class="texto1">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, animi vero excepturi tenetur quibusdam accusantium. Odio suscipit, aut laboriosam maiores laudantium temporibus facilis, fugit placeat ducimus totam harum, velit iure?
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, animi vero excepturi tenetur quibusdam accusantium. Odio suscipit, aut laboriosam maiores laudantium temporibus facilis, fugit placeat ducimus totam harum, velit iure?
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, animi vero excepturi tenetur quibusdam accusantium. Odio suscipit, aut laboriosam maiores laudantium temporibus facilis, fugit placeat ducimus totam harum, velit iure?
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, animi vero excepturi tenetur quibusdam accusantium. Odio suscipit, aut laboriosam maiores laudantium temporibus facilis, fugit placeat ducimus totam harum, velit iure?
-      </div>
-      </div>
-      <div class="texto2">
-        <img src="css/imagens/atmpng.png" alt="">
-      </div>
-  </div>
-</section>
-
+  </section>
 </body>
 
 </html>
