Sobre nós pronto

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -55,6 +55,28 @@
         </div>
       </div>
   </section>
+
+ <section class="dois">
+    <div class="fundo_sobre_nos">
+
+      <div class="container_sobre_nos">
+        <div class="texto_sobre_nos2">
+          <img src="css/imagens/cartoespng.png" alt="">
+        </div>
+        <div class="titulo_sobre_nos">
+          <h1>Sobre nós</h1>
+          <div class="texto_sobre_nos">
+            Nossa equipe é composta por seis sócios dedicados que combinam conhecimento profundo e tecnologia de ponta
+            para oferecer uma experiência incomparável. Focamos em você e nas suas necessidades, garantindo
+            disponibilidade contínua e eficiência operacional através de soluções personalizadas e centradas no cliente.
+            Com a VaultWise, você não apenas gerencia seus ATMs; você os potencializa. Descubra como nossa expertise
+            pode elevar a performance e a segurança das suas operações.
+          </div>
+        </div>
+
+      </div>
+  </section>
+
 </body>
 
 </html>
