Em andamento aba de contato

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -73,10 +73,25 @@
             pode elevar a performance e a segurança das suas operações.
           </div>
         </div>
-
       </div>
   </section>
 
+  <section class="tres">
+    <div class="fundocontato">
+      <div class="containercontato">
+        <div class="titulocontato">
+          <h1>Informações de Contato</h1>
+        </div>
+        <div class="textocontato">
+          <p>Pronto para elevar a performance e segurança dos seus ATMs? Fale conosco e descubra como podemos transformar a gestão dos seus caixas eletrônicos com soluções inovadoras e personalizadas.</p>
+          <p>Estamos ansiosos para conectar com você e explorar como a VaultWise pode otimizar suas operações de ATMs. Entre em contato agora e dê o próximo passo rumo à excelência!</p>
+        </div>
+      </div>
+      <div class="mapa">
+
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
