Site institucional atualizado mas não pronto.

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -15,6 +15,11 @@
 
 <body>
   <section class="um">
+    <div class="espaco_card">
+      <div class="card_um"></div>
+      <div class="card_um sec"></div>
+      <div class="card_um th"></div>
+    </div>
     <div class="fundo">
       <header>
 
@@ -49,14 +54,17 @@
             tecnologia de ponta, a VaultWIse otimiza a gestão de caixas eletrônicos, assegurando disponibilidade
             contínua e eficiência operacional.
           </div>
-        </div>
-        <div class="texto2">
-          <img src="css/imagens/atmpng.png" alt="">
+          <button class="button">
+            <span class="button_lg">
+              <span class="button_sl"></span>
+              <span class="button_text">Saiba mais</span>
+            </span>
+          </button>
         </div>
       </div>
   </section>
 
- <section class="dois">
+  <section class="dois">
     <div class="fundo_sobre_nos">
 
       <div class="container_sobre_nos">
@@ -83,8 +91,10 @@
           <h1>Informações de Contato</h1>
         </div>
         <div class="textocontato">
-          <p>Pronto para elevar a performance e segurança dos seus ATMs? Fale conosco e descubra como podemos transformar a gestão dos seus caixas eletrônicos com soluções inovadoras e personalizadas.</p>
-          <p>Estamos ansiosos para conectar com você e explorar como a VaultWise pode otimizar suas operações de ATMs. Entre em contato agora e dê o próximo passo rumo à excelência!</p>
+          <p>Pronto para elevar a performance e segurança dos seus ATMs? Fale conosco e descubra como podemos
+            transformar a gestão dos seus caixas eletrônicos com soluções inovadoras e personalizadas.</p>
+          <p>Estamos ansiosos para conectar com você e explorar como a VaultWise pode otimizar suas operações de ATMs.
+            Entre em contato agora e dê o próximo passo rumo à excelência!</p>
         </div>
       </div>
       <div class="mapa">
