Site institucional quase finalizado

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -10,15 +10,53 @@
   <link
     href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:wght@700&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <title>VaultWise</title>
 </head>
 
 <body>
   <section class="um">
     <div class="espaco_card">
-      <div class="card_um"></div>
-      <div class="card_um sec"></div>
-      <div class="card_um th"></div>
+      <div class="card_um">
+        <div class="icons">
+        <img src="css/imagens/icon1.png" alt="">
+        </div>
+        <div class="titulocard">
+          <h1>Monitoramento</h1>
+        </div>
+        <div class="textocard">
+          <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+        </div>
+      </div>
+      <div class="card_um sec">
+        <div class="icons">
+          <img src="css/imagens/icon2.png" alt="">
+          </div>
+          <div class="titulocard">
+            <h1>Segurança</h1>
+          </div>
+          <div class="textocard">
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+          </div>
+      </div>
+      <div class="card_um th">
+        <div class="icons">
+          <img src="css/imagens/icon3.png" alt="">
+          </div>
+          <div class="titulocard">
+            <h1>ATM's</h1>
+          </div>
+          <div class="textocard">
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+          </div>
+      </div>
     </div>
     <div class="fundo">
       <header>
@@ -69,7 +107,7 @@
 
       <div class="container_sobre_nos">
         <div class="texto_sobre_nos2">
-          <img src="css/imagens/cartoespng.png" alt="">
+          <img src="css/imagens/fotosobrenos.png" alt="">
         </div>
         <div class="titulo_sobre_nos">
           <h1>Sobre nós</h1>
@@ -85,19 +123,59 @@
   </section>
 
   <section class="tres">
-    <div class="fundocontato">
-      <div class="containercontato">
-        <div class="titulocontato">
-          <h1>Informações de Contato</h1>
+    <div class="fundoequipe">
+      <div class="containerequipe">
+        <div class="titulo_equipe">
+          <h1>Conheça a equipe VaultWise</h1>
+          <div class="texto_equipe">
+            Nossa equipe é composta por seis sócios dedicados que combinam conhecimento profundo e tecnologia de ponta
+            para oferecer uma experiência incomparável. Focamos em você e nas suas necessidades, garantindo
+            disponibilidade contínua e eficiência operacional através de soluções personalizadas e centradas no cliente.
+            Com a VaultWise, você não apenas gerencia seus ATMs; você os potencializa. Descubra como nossa expertise
+            pode elevar a performance e a segurança das suas operações.
+          </div>
         </div>
-        <div class="textocontato">
-          <p>Pronto para elevar a performance e segurança dos seus ATMs? Fale conosco e descubra como podemos
-            transformar a gestão dos seus caixas eletrônicos com soluções inovadoras e personalizadas.</p>
-          <p>Estamos ansiosos para conectar com você e explorar como a VaultWise pode otimizar suas operações de ATMs.
-            Entre em contato agora e dê o próximo passo rumo à excelência!</p>
+
+        <div class="containercard">
+        <div class="cardcointainer2">
+        <article class="cardarticle">
+          <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+
+          <div class="carddados">
+            <span class="carddescricao1">Cargo:</span>
+            <h2 class="titulocard1">Nome: Pessoa</h2>
+          </div>
         </div>
+        </article>
+
+        <div class="containercard">
+          <div class="cardcointainer2">
+          <article class="cardarticle">
+            <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+  
+            <div class="carddados">
+              <span class="carddescricao1">Cargo:</span>
+              <h2 class="titulocard1">Nome: Pessoa</h2>
+            </div>
+          </div>
+          </article>
+
+          <div class="containercard">
+            <div class="cardcointainer2">
+            <article class="cardarticle">
+              <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+    
+              <div class="carddados">
+                <span class="carddescricao1">Cargo:</span>
+                <h2 class="titulocard1">Nome: Pessoa</h2>
+              </div>
+            </div>
+            </article>
+            
+
       </div>
-      <div class="mapa">
+      </div>
+  </div>
 
       </div>
     </div>
