Arrumar tela Equipe

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -163,7 +163,7 @@
           <div class="containercard">
             <div class="cardcointainer2">
             <article class="cardarticle">
-              <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+              <img src="css/imagens/fotoroque.jpg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
     
               <div class="carddados">
                 <span class="carddescricao1">Cargo:</span>
@@ -171,6 +171,8 @@
               </div>
             </div>
             </article>
+
+            9
             
 
       </div>
