Teste de Cadastro de empresa API

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -75,7 +75,7 @@
               <a href="">Sobre Nós</a>
             </li>
             <li>
-              <a href="">Contato</a>
+              <a href="./Cadastro Empresa/index.html">Contato</a>
             </li>
             <li>
               <a href="">Equipe</a>
