Teste de cadastro de usuario API

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -78,7 +78,7 @@
               <a href="./Cadastro Empresa/index.html">Contato</a>
             </li>
             <li>
-              <a href="">Equipe</a>
+              <a href="./Cadastro Funcionario/index.html">Equipe</a>
             </li>
           </ul>
         </nav>
