--- a/Site Institucional/public/Cadastro Funcionario/index.html
+++ b/Site Institucional/public/Cadastro Funcionario/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <input type="password" placeholder="Senha" class="input_senha">
                 <div class="buttons">
-                    <button type="submit" class="btn-primary">Criar Conta</button>
+                    <button onclick="cadastrar()" type="submit" class="btn-primary">Criar Conta</button>
                     <button type="button" class="btn-secondary">Mudar Cadastro</button>
                    
                 </div>
@@ -47,3 +47,125 @@
     </div>
 </body>
 </html>
+
+<script>
+
+    // Array para armazenar empresas cadastradas para validação de código de ativação 
+    // let listaEmpresasCadastradas = [];
+  
+    function cadastrar() {
+      // aguardar();
+  
+      //Recupere o valor da nova input pelo nome do id
+      // Agora vá para o método fetch logo abaixo
+      var nome = input_nome.value;
+      var cpf = input_cpf.value;
+      var email = input_email.value;
+      var telefone = input_telefone.value;
+      var cargo = input_cargo.value;
+      var empresa = input_empresa.value;
+      var senha = input_senha.value;
+      // Verificando se há algum campo em branco
+      if (
+
+        nome == "" ||
+        cpf == "" ||
+        email == "" ||
+        telefone == "" ||
+        cargo == "" ||
+        fkEmpresa == "" ||
+        senha == "" 
+      ) {
+        cardErro.style.display = "block";
+        mensagem_erro.innerHTML =
+          "(Mensagem de erro para todos os campos em branco)";
+  
+        finalizarAguardar();
+        return false;
+      } else {
+        setInterval(sumirMensagem, 5000);
+      }
+  
+      // Verificando se o código de ativação é de alguma empresa cadastrada
+    //   for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
+    //     if (listaEmpresasCadastradas[i].codigo_ativacao == codigoVar) {
+    //       idEmpresaVincular = listaEmpresasCadastradas[i].id
+    //       console.log("Código de ativação válido.");
+    //       break;
+    //     } else {
+    //       cardErro.style.display = "block";
+    //       mensagem_erro.innerHTML = "(Mensagem de erro para código inválido)";
+    //       finalizarAguardar();
+    //     }
+    //   }
+  
+      // Enviando o valor da nova input
+      fetch("/usuarios/cadastrar", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          // crie um atributo que recebe o valor recuperado aqui
+          // Agora vá para o arquivo routes/usuario.js
+            nomeServer: nomeVar,
+            cpfServer: cpfVar,
+            emailServer: emailVar,
+            telefoneServer: telefoneVar,
+            empresaServer: empresaVar,
+            cargoServer: cargoVar,
+            senhaServer: senhaVar,
+
+        }),
+      })
+        .then(function (resposta) {
+          console.log("resposta: ", resposta);
+  
+          if (resposta.ok) {
+            cardErro.style.display = "block";
+  
+            mensagem_erro.innerHTML =
+              "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+  
+            setTimeout(() => {
+              window.location = "login.html";
+            }, "2000");
+  
+            limparFormulario();
+            finalizarAguardar();
+          } else {
+            throw "Houve um erro ao tentar realizar o cadastro!";
+          }
+        })
+        .catch(function (resposta) {
+          console.log(`#ERRO: ${resposta}`);
+          finalizarAguardar();
+        });
+  
+      return false;
+    }
+  
+    // Listando empresas cadastradas 
+    // function listar() {
+    //   fetch("/empresas/listar", {
+    //     method: "GET",
+    //   })
+    //     .then(function (resposta) {
+    //       resposta.json().then((empresas) => {
+    //         empresas.forEach((empresa) => {
+    //           listaEmpresasCadastradas.push(empresa);
+  
+    //           console.log("listaEmpresasCadastradas")
+    //           console.log(listaEmpresasCadastradas[0].codigo_ativacao)
+    //         });
+    //       });
+    //     })
+    //     .catch(function (resposta) {
+    //       console.log(`#ERRO: ${resposta}`);
+    //     });
+    // }
+  
+    // function sumirMensagem() {
+    //   cardErro.style.display = "none";
+    // }
+  </script>
