--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -75,6 +75,7 @@
               <a href="">Sobre Nós</a>
             </li>
             <li>
+              <!-- deixei estes hrefs apenas para teste de cadastro -->
               <a href="./Cadastro Empresa/index.html">Contato</a>
             </li>
             <li>
@@ -199,11 +200,11 @@
                 <div class="containercard">
                   <div class="cardcointainer2">
                   <article class="cardarticle">
-                    <img src="css/imagens/fotoroque.jpg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
+                    <img src="css/imagens/fotoPerfilAlexandre.jpg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
           
                     <div class="carddados">
                       <span class="carddescricao1">Cargo:</span>
-                      <h2 class="titulocard1">Nome: Pessoa</h2>
+                      <h2 class="titulocard1">Nome: Alexandre</h2>
                     </div>
                   </div>
                   </article>  
