Inicio responsividade mobile

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -76,7 +76,7 @@
             </li>
             <li>
               <!-- deixei estes hrefs apenas para teste de cadastro -->
-              <a href="./Cadastro Empresa/index.html">Contato</a>
+              <a href="./Cadastro Empresa/index.html">Suporte</a>
             </li>
             <li>
               <a href="./Cadastro Funcionario/index.html">Equipe</a>
