--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -72,14 +72,14 @@
               <a href="" class="ativo">Home</a>
             </li>
             <li>
-              <a href="">Sobre Nós</a>
+              <a href="#sobre_nos">Sobre Nós</a>
             </li>
             <li>
               <!-- deixei estes hrefs apenas para teste de cadastro -->
-              <a href="./Cadastro Empresa/index.html">Suporte</a>
+              <a href="./CadastroEmpresa.html">Cadastro</a>
             </li>
             <li>
-              <a href="./Cadastro Funcionario/index.html">Equipe</a>
+              <a href="./Cadastro Funcionario/index.html">Login</a>
             </li>
           </ul>
         </nav>
@@ -106,7 +106,7 @@
   <section class="dois">
     <div class="fundo_sobre_nos">
 
-      <div class="container_sobre_nos">
+      <div id="sobre_nos" class="container_sobre_nos">
         <div class="texto_sobre_nos2">
           <img src="css/imagens/fotosobrenos.png" alt="">
         </div>
