--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault Wise - Crie sua conta</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styleCadastroEmpresa.css">
 </head>
 <body>
     <header>
-        <div class="logo">VAULT WISE</div>
+        <div class="logo"><img src="css/imagens/logosemfundo.png" alt=""></div>
+        <div class="logo">VaultWise</div>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Valores</a></li>
+            <ul id="link_nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#sobre_nos">Sobre</a></li>
+                <li><a href="#">Cadastro</a></li>
                 <li class="btn_login"><a href="#">Login</a></li>
             </ul>
         </nav>
+        <button class="hamburguer" onclick="ativarMenu()">&#9776;</button>
     </header>
     <div class="container">
         <div class="form-container">
             <h1>Olá XXXXX!</h1>
             <h2>Cadastro de Empresas<span style="color: #982727;">.</span></h2>
-            <p>já possui conta?<a href="#"><span style="color: #F7B6B9  ;"> Login</span></a></p>
+            <p>já possui conta?<a href="#"><span style="color: #F7B6B9;"> Login</span></a></p>
             <form>
                 <div class="inputs1">
                     <input type="text" placeholder="Nome Fantasia" class="input_nomefantasia">
@@ -39,7 +41,7 @@
                 <input type="password" placeholder="Senha" class="input_senha">
                 <div class="buttons">
                     <button onclick="cadastrar()" type="button" class="btn-primary">Criar Conta</button>
-                    <button  type="button" class="btn-secondary">Mudar Cadastro</button>
+                    <button onclick="mudarCadastro()" type="button" class="btn-secondary">Mudar Cadastro</button>
                    
                 </div>
             </form>
@@ -52,6 +54,15 @@
 
     // Array para armazenar empresas cadastradas para validação de código de ativação 
     // let listaEmpresasCadastradas = [];
+
+    function ativarMenu() {
+      var linknav = document.getElementById("link_nav")
+      linknav.classList.toggle("ativo")
+    }
+
+    function mudarCadastro() {
+        window.location.href="CadastroFuncionario.html"
+      }
   
     function cadastrar() {
   var razaoSocial = document.getElementById(".input_razaosocial");
