Responsividade tela de Login e home iniciada

--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#sobre_nos">Sobre</a></li>
                 <li><a href="#">Cadastro</a></li>
-                <li class="btn_login"><a href="#">Login</a></li>
+                <li class="btn_login"><a href="Login.html">Login</a></li>
             </ul>
         </nav>
         <button class="hamburguer" onclick="ativarMenu()">&#9776;</button>
