Cadastro de Empresa no BD e pequeno ajuste no BD

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -79,7 +79,7 @@
               <a href="./CadastroEmpresa.html">Cadastro</a>
             </li>
             <li>
-              <a href="./Cadastro Funcionario/index.html">Login</a>
+              <a href="./CadastroFuncionario.html">Login</a>
             </li>
           </ul>
         </nav>
