--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault Wise - Crie sua conta</title>
     <link rel="stylesheet" href="css/styleCadastroEmpresa.css">
+    <script src="js/sessao.js"></script>
 </head>
-<body>
+<body onload="listar()">
     <header>
         <div class="logo"><img src="css/imagens/logosemfundo.png" alt=""></div>
         <div class="logo">VaultWise</div>
@@ -25,26 +26,24 @@
             <h1>Olá XXXXX!</h1>
             <h2>Cadastro de Empresas<span style="color: #982727;">.</span></h2>
             <p>já possui conta?<a href="#"><span style="color: #F7B6B9;"> Login</span></a></p>
-            <form>
                 <div class="inputs1">
-                    <input type="text" placeholder="Nome Fantasia" class="input_nomefantasia">
-                    <input type="text" placeholder="Razão Social" class="input_razaosocial">
+                    <input type="text" placeholder="Nome Fantasia" class="input_nomefantasia" id="input_nomefantasia" >
+                    <input type="text" placeholder="Razão Social" class="input_razaosocial" id="input_razaosocial">
                 </div>
                 <div class="inputs2">
-                    <input type="text" placeholder="CNPJ" class="input_cnpj">
-                    <input type="text" placeholder="CEP" class="input_cep">
+                    <input type="text" placeholder="CNPJ" class="input_cnpj" id="input_cnpj">
+                    <input type="text" placeholder="CEP" class="input_cep" id="input_cep">
                 </div>
                 <div class="inputs3">
-                    <input type="text" placeholder="Telefone" class="input_telefone">
-                    <input type="text" placeholder="Email" class="input_email">
+                    <input type="text" placeholder="Telefone" class="input_telefone" id="input_telefone">
+                    <input type="text" placeholder="Email" class="input_email" id="input_email">
                 </div>
-                <input type="password" placeholder="Senha" class="input_senha">
+                <input type="password" placeholder="Senha" class="input_senha" id="input_senha">
                 <div class="buttons">
-                    <button onclick="cadastrar()" type="button" class="btn-primary">Criar Conta</button>
+                    <button onclick="cadastrar()" class="btn-primary">Criar Conta</button>
                     <button onclick="mudarCadastro()" type="button" class="btn-secondary">Mudar Cadastro</button>
                    
                 </div>
-            </form>
         </div>
     </div>
 </body>
@@ -63,16 +62,18 @@
     function mudarCadastro() {
         window.location.href="CadastroFuncionario.html"
       }
-  
+   
     function cadastrar() {
-  var razaoSocial = document.getElementById(".input_razaosocial");
-  var cnpj = document.getElementById(".input_cnpj");
-  var cep = document.getElementById(".input_cep");
-  var telefone = document.getElementById(".input_telefone");
-  var email = document.getElementById(".input_email");
-  var senha = document.getElementById(".input_senha");
+  var nomeFantasia = input_nomefantasia.value;
+  var razaoSocial = input_razaosocial.value;
+  var cnpj = input_cnpj.value;
+  var cep = input_cep.value;
+  var telefone = input_telefone.value;
+  var email = input_email.value;
+  var senha = input_senha.value;
 
   if (
+  nomeFantasia === "" ||  
   razaoSocial === "" ||
   cnpj === "" ||
   cep === "" ||
@@ -80,12 +81,11 @@
   email === "" ||
   senha === ""
 ) {
-  cardErro.style.display = "block";
-  mensagem_erro.innerHTML = "Todos os campos são obrigatórios.";
-  return false;
+//   cardErro.style.display = "block";
+//   mensagem_erro.innerHTML = "Todos os campos são obrigatórios.";
+//   return false;
 }
 
-  // Enviando o valor da nova input
   fetch("/empresas/cadastrar", {
     method: "POST",
     headers: {
@@ -97,14 +97,14 @@
       cepServer: cep,
       telefoneServer: telefone,
       emailServer: email,
-      senhaServer: senha,
+      senhaServer: senha
     }),
   })
   .then(function (resposta) {
   console.log("resposta: ", resposta);
 
   if (resposta.ok) {
-    cardErro.style.display = "block";
+    // cardErro.style.display = "block";
     mensagem_erro.innerHTML =
       "Cadastro realizado com sucesso! Redirecionando para a tela de Login...";
 
@@ -127,26 +127,26 @@
 
   
     // Listando empresas cadastradas 
-    // function listar() {
-    //   fetch("/empresas/listar", {
-    //     method: "GET",
-    //   })
-    //     .then(function (resposta) {
-    //       resposta.json().then((empresas) => {
-    //         empresas.forEach((empresa) => {
-    //           listaEmpresasCadastradas.push(empresa);
+     function listar() {
+       fetch("/empresas/listar", {
+         method: "GET",
+       })
+         .then(function (resposta) {
+           resposta.json().then((empresas) => {
+             empresas.forEach((empresa) => {
+               listaEmpresasCadastradas.push(empresa);
   
-    //           console.log("listaEmpresasCadastradas")
-    //           console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-    //         });
-    //       });
-    //     })
-    //     .catch(function (resposta) {
-    //       console.log(`#ERRO: ${resposta}`);
-    //     });
-    // }
+               console.log("listaEmpresasCadastradas")
+               console.log(listaEmpresasCadastradas[0].codigo_ativacao)
+             });
+           });
+         })
+         .catch(function (resposta) {
+           console.log(`#ERRO: ${resposta}`);
+         });  
+     }
   
-    // function sumirMensagem() {
-    //   cardErro.style.display = "none";
-    // }
+    //  function sumirMensagem() {
+    //    cardErro.style.display = "none";
+    //  }
   </script>
