--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styleCadastroEmpresa.css">
     <script src="js/sessao.js"></script>
 </head>
-<body onload="listar()">
+<!-- <body onload="listar()"> -->
     <header>
         <div class="logo"><img src="css/imagens/logosemfundo.png" alt=""></div>
         <div class="logo">VaultWise</div>
@@ -127,24 +127,24 @@
 
   
     // Listando empresas cadastradas 
-     function listar() {
-       fetch("/empresas/listar", {
-         method: "GET",
-       })
-         .then(function (resposta) {
-           resposta.json().then((empresas) => {
-             empresas.forEach((empresa) => {
-               listaEmpresasCadastradas.push(empresa);
+    //  function listar() {
+    //    fetch("/empresas/listar", {
+    //      method: "GET",
+    //    })
+    //      .then(function (resposta) {
+    //        resposta.json().then((empresas) => {
+    //          empresas.forEach((empresa) => {
+    //            listaEmpresasCadastradas.push(empresa);
   
-               console.log("listaEmpresasCadastradas")
-               console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-             });
-           });
-         })
-         .catch(function (resposta) {
-           console.log(`#ERRO: ${resposta}`);
-         });  
-     }
+    //            console.log("listaEmpresasCadastradas")
+    //            console.log(listaEmpresasCadastradas[0].codigo_ativacao)
+    //          });
+    //        });
+    //      })
+    //      .catch(function (resposta) {
+    //        console.log(`#ERRO: ${resposta}`);
+    //      });  
+    //  }
   
     //  function sumirMensagem() {
     //    cardErro.style.display = "none";
