--- a/Site Institucional/public/Login.html
+++ b/Site Institucional/public/Login.html
@@ -24,13 +24,16 @@
             <h1>Bom te ver de novo!</h1>
             <h2>Faça seu login<span style="color: #982727;">.</span></h2>
             <p>não possui conta?<a href="#"><span style="color: #F7B6B9  ;"> Cadastre-se</span></a></p>
-            <form>
-                    <input type="text" placeholder="Email" class="input_email">
-                    <input type="text" placeholder="Senha" class="input_senha">
-                <div class="buttons">
-                    <button type="submit" class="btn-primary">Fazer Login</button>
-                </div>
-            </form>
+            
+            <input type="text" placeholder="Email" id="input_email" class="input_email">
+            <input type="password" placeholder="Senha" id="input_senha" class="input_senha">
+            <div class="buttons">
+            <button class="btn-primary" onclick="entrar()">Fazer Login</button>
+            </div>
+            <div id="div_aguardar" class="loading-div">
+            <img src="css/imagens/aguardar.gif" id="loading-gif">
+            </div>
+            <div id="div_erros_login"></div>
         </div>
     </div>
 </body>
@@ -38,9 +41,77 @@
 
 <script>
 
-function ativarMenu() {
+    function ativarMenu() {
       var linknav = document.getElementById("link_nav")
       linknav.classList.toggle("ativo")
+    }
+
+    function entrar() {
+        aguardar();
+
+        var emailVar = input_email.value;
+        var senhaVar = input_senha.value;
+
+        if (emailVar == "" || senhaVar == "") {
+            cardErro.style.display = "block"
+            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+            finalizarAguardar();
+            return false;
+        }
+        else {
+            setInterval(sumirMensagem, 5000)
+        }
+
+        console.log("FORM LOGIN: ", emailVar);
+        console.log("FORM SENHA: ", senhaVar);
+
+        fetch("/usuarios/autenticar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                emailServer: emailVar,
+                senhaServer: senhaVar
+            })
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO entrar()!")
+
+            if (resposta.ok) {
+                console.log(resposta);
+
+                resposta.json().then(json => {
+                    console.log(json);
+                    console.log(JSON.stringify(json));
+                    sessionStorage.EMAIL_USUARIO = json.email;
+                    sessionStorage.NOME_USUARIO = json.nome;
+                    sessionStorage.ID_USUARIO = json.id;
+
+                    setTimeout(function () {
+                        window.location = "./dashboard/logado.html";
+                    }, 1000); // apenas para exibir o loading
+
+                });
+
+            } else {
+
+                console.log("Houve um erro ao tentar realizar o login!");
+
+                resposta.text().then(texto => {
+                    console.error(texto);
+                    finalizarAguardar(texto);
+                });
+            }
+
+        }).catch(function (erro) {
+            console.log(erro);
+        })
+
+        return false;
+    }
+
+    function sumirMensagem() {
+        cardErro.style.display = "none"
     }
 
 </script>
