Finalizando cadastro de equipamento e reorganizando cor do header

--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -15,7 +15,6 @@
             <ul id="link_nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#sobre_nos">Sobre</a></li>
-                <li><a href="#">Cadastro</a></li>
                 <li class="btn_login"><a href="Login.html">Login</a></li>
             </ul>
         </nav>
@@ -24,8 +23,8 @@
     <div class="container">
         <div class="form-container">
             <h1>Olá XXXXX!</h1>
-            <h2>Cadastro de Empresas<span style="color: #982727;">.</span></h2>
-            <p>já possui conta?<a href="#"><span style="color: #F7B6B9;"> Login</span></a></p>
+            <h2>Cadastro de Empresas<span style="color: #012e5c;">.</span></h2>
+            <p>já possui conta?<a href="#"><span style="color: #81aad2;"> Login</span></a></p>
                 <div class="inputs1">
                     <input type="text" placeholder="Nome Fantasia" class="input_nomefantasia" id="input_nomefantasia" >
                     <input type="text" placeholder="Razão Social" class="input_razaosocial" id="input_razaosocial">
