--- a/Site Institucional/public/CadastroEquipamentos.html
+++ b/Site Institucional/public/CadastroEquipamentos.html
@@ -10,15 +10,16 @@
 
 <body onload="listar()">
     <header>
-        <div class="logo">VAULT WISE</div>
+        <div class="logo"><img src="css/imagens/logosemfundo.png" alt=""></div>
+        <div class="logo">VaultWise</div>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Valores</a></li>
-                <li class="btn_login"><a href="#">Login</a></li>
+            <ul id="link_nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#sobre_nos">Sobre</a></li>
+                <li class="btn_login"><a href="Login.html">Login</a></li>
             </ul>
         </nav>
+        <button class="hamburguer" onclick="ativarMenu()">&#9776;</button>
     </header>
     <div class="container">
         <div class="form-container">
