--- a/Site Institucional/public/CadastroFuncionario.html
+++ b/Site Institucional/public/CadastroFuncionario.html
@@ -14,7 +14,6 @@
         <ul id="link_nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#sobre_nos">Sobre</a></li>
-            <li><a href="#">Cadastro</a></li>
             <li class="btn_login"><a href="Login.html">Login</a></li>
         </ul>
     </nav>
@@ -23,8 +22,8 @@
     <div class="container">
         <div class="form-container">
             <h1>Olá! Seja bem-vindo!</h1>
-            <h2>Crie sua conta<span style="color: #982727;">.</span></h2>
-            <p>já possui conta?<a href="#"><span style="color: #F7B6B9  ;"> Login</span></a></p>
+            <h2>Crie sua conta<span style="color: #012e5c;">.</span></h2>
+            <p>já possui conta?<a href="#"><span style="color: #81aad2  ;"> Login</span></a></p>
             <form>
                 <div class="inputs1">
                     <input type="text" placeholder="Nome" class="input_nome" id="input_nome">
@@ -51,10 +50,14 @@
 
 <script>
 
+function ativarMenu() {
+      var linknav = document.getElementById("link_nav")
+      linknav.classList.toggle("ativo")
+    }
 
-
-
-
+    function mudarCadastro() {
+        window.location.href="CadastroEmpresa.html"
+      }
    
     function cadastrar() {
       event.preventDefault();
