--- a/Site Institucional/public/Login.html
+++ b/Site Institucional/public/Login.html
@@ -14,7 +14,6 @@
             <ul id="link_nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#sobre_nos">Sobre</a></li>
-                <li><a href="CadastroEmpresa.html">Cadastro</a></li>
             </ul>
         </nav>
         <button class="hamburguer" onclick="ativarMenu()">&#9776;</button>
@@ -22,8 +21,8 @@
     <div class="container">
         <div class="form-container">
             <h1>Bom te ver de novo!</h1>
-            <h2>Faça seu login<span style="color: #982727;">.</span></h2>
-            <p>não possui conta?<a href="#"><span style="color: #F7B6B9  ;"> Cadastre-se</span></a></p>
+            <h2>Faça seu login<span style="color: #012e5c;">.</span></h2>
+            <p>não possui conta?<a href="#"><span style="color: #81aad2  ;"> Cadastre-se</span></a></p>
             
             <input type="text" placeholder="Email" id="input_email" class="input_email">
             <input type="password" placeholder="Senha" id="input_senha" class="input_senha">
