--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -67,17 +67,13 @@
         <nav>
           <ul>
             <li>
-              <a href="" class="ativo">Home</a>
+              <a href="CadastroEquipamentos.html" class="ativo">Home</a>
             </li>
             <li>
               <a href="#sobre_nos">Sobre Nós</a>
             </li>
             <li>
-              <!-- deixei estes hrefs apenas para teste de cadastro -->
-              <a href="./CadastroEmpresa.html">Cadastro</a>
-            </li>
-            <li>
-              <a href="./CadastroFuncionario.html">Login</a>
+              <a href="Login.html">Login</a>
             </li>
           </ul>
         </nav>
@@ -267,8 +263,7 @@
   <div class="footer-info">
     <p>&copy; 2024 VaultWise. Todos os direitos reservados.</p>
     <p><a href="#privacidade">Política de Privacidade</a> | <a href="#termos">Termos de Serviço</a></p>
-    <p>Endereço: Av. Paulista, 123, São Paulo, SP</p>
-    <p>Email: vaultwise@empresa.com.br</p>
+    <p>Endereço: Av. Paulista, 123, São Paulo, SP | Email: vaultwise@empresa.com.br</p>
   </div>
 </footer>
 
@@ -321,6 +316,5 @@
 
   if (window.matchMedia('(max-width: 430px)').matches) {
     atualizar_card()
-
   }
 </script>
