--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -15,7 +15,6 @@
             <ul id="link_nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#sobre_nos">Sobre</a></li>
-                <li><a href="#">Cadastro</a></li>
                 <li class="btn_login"><a href="Login.html">Login</a></li>
             </ul>
         </nav>
@@ -24,21 +23,20 @@
     <div class="container">
         <div class="form-container">
             <h1>Olá XXXXX!</h1>
-            <h2>Cadastro de Empresas<span style="color: #982727;">.</span></h2>
-            <p>já possui conta?<a href="#"><span style="color: #F7B6B9;"> Login</span></a></p>
+            <h2>Cadastro de Empresas<span style="color: #012e5c;">.</span></h2>
+            <p>já possui conta?<a href="#"><span style="color: #81aad2;"> Login</span></a></p>
                 <div class="inputs1">
-                    <input type="text" placeholder="Nome Fantasia" class="input_nomefantasia" id="input_nomefantasia" >
                     <input type="text" placeholder="Razão Social" class="input_razaosocial" id="input_razaosocial">
+                    <input type="text" placeholder="CNPJ" class="input_cnpj" id="input_cnpj">
                 </div>
                 <div class="inputs2">
-                    <input type="text" placeholder="CNPJ" class="input_cnpj" id="input_cnpj">
                     <input type="text" placeholder="CEP" class="input_cep" id="input_cep">
+                    <input type="text" placeholder="Telefone" class="input_telefone" id="input_telefone">
                 </div>
                 <div class="inputs3">
-                    <input type="text" placeholder="Telefone" class="input_telefone" id="input_telefone">
                     <input type="text" placeholder="Email" class="input_email" id="input_email">
+                    <input type="password" placeholder="Senha" class="input_senha" id="input_senha">
                 </div>
-                <input type="password" placeholder="Senha" class="input_senha" id="input_senha">
                 <div class="buttons">
                     <button onclick="cadastrar()" class="btn-primary">Criar Conta</button>
                     <button onclick="mudarCadastro()" type="button" class="btn-secondary">Mudar Cadastro</button>
@@ -64,7 +62,6 @@
       }
    
     function cadastrar() {
-  var nomeFantasia = input_nomefantasia.value;
   var razaoSocial = input_razaosocial.value;
   var cnpj = input_cnpj.value;
   var cep = input_cep.value;
@@ -72,8 +69,7 @@
   var email = input_email.value;
   var senha = input_senha.value;
 
-  if (
-  nomeFantasia === "" ||  
+  if ( 
   razaoSocial === "" ||
   cnpj === "" ||
   cep === "" ||
