--- a/Site Institucional/public/CadastroFuncionario.html
+++ b/Site Institucional/public/CadastroFuncionario.html
@@ -14,7 +14,6 @@
         <ul id="link_nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#sobre_nos">Sobre</a></li>
-            <li><a href="#">Cadastro</a></li>
             <li class="btn_login"><a href="Login.html">Login</a></li>
         </ul>
     </nav>
@@ -23,8 +22,8 @@
     <div class="container">
         <div class="form-container">
             <h1>Olá! Seja bem-vindo!</h1>
-            <h2>Crie sua conta<span style="color: #982727;">.</span></h2>
-            <p>já possui conta?<a href="#"><span style="color: #F7B6B9  ;"> Login</span></a></p>
+            <h2>Crie sua conta<span style="color: #012e5c;">.</span></h2>
+            <p>já possui conta?<a href="#"><span style="color: #81aad2  ;"> Login</span></a></p>
             <form>
                 <div class="inputs1">
                     <input type="text" placeholder="Nome" class="input_nome" id="input_nome">
@@ -38,7 +37,10 @@
                     <input type="text" placeholder="Empresa" class="input_empresa" id="input_empresa">
                     <input type="text" placeholder="Cargo" class="input_cargo" id="input_cargo">
                 </div>
-                <input type="password" placeholder="Senha" class="input_senha" id="input_senha">
+                <div class="inputs4">
+                    <input type="text" placeholder="CNPJ" class="input_cnpjValidacao" id="input_cnpjValidacao">
+                    <input type="password" placeholder="Senha" class="input_senha" id="input_senha">
+                </div>
                 <div class="buttons">
                     <button onclick="cadastrar()" type="submit" class="btn-primary">Criar Conta</button>
                     <button onclick="mudarCadastro()" href="CadastroEmpresa.html" type="button" class="btn-secondary">Mudar Cadastro</button>
@@ -51,7 +53,14 @@
 
 <script>
 
+function ativarMenu() {
+      var linknav = document.getElementById("link_nav")
+      linknav.classList.toggle("ativo")
+    }
 
+    function mudarCadastro() {
+        window.location.href="CadastroEmpresa.html"
+      }
 
 
 
@@ -63,6 +72,8 @@
         var email = input_email.value;
         var telefone = input_telefone.value;
         var cargo = input_cargo.value;
+        var cnpjValidacao = input_cnpjValidacao.value;
+
         // var empresa = input_empresa.value;
         var senha = input_senha.value;
 
@@ -98,8 +109,7 @@ fetch("/usuarios/cadastrar", {
               telefoneServer: telefone,
               cargoServer: cargo,
               senhaServer: senha,
-              
-              // empresaServer: empresa,
+              cnpjValidacaoServer: cnpjValidacao
           }),
         })
         .then(function (resposta) {
