Continuando a responsividade da home

--- a/Site Institucional/public/Login.html
+++ b/Site Institucional/public/Login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault Wise - Faça seu login</title>
     <link rel="stylesheet" href="css/styleLogin.css">
+    <script src="js/sessao.js"></script>
 </head>
 <body>
     <header>
