--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -118,39 +118,51 @@
   </section>
 
   <section class="tres">
-    <div class="fundoequipe">
-      <div class="containerequipe">
-        <div class="titulo_equipe">
-          <h1>Conheça a equipe VaultWise</h1>
-          <div class="texto_equipe">
-            Nossa equipe é composta por seis sócios dedicados que combinam conhecimento profundo e tecnologia de ponta
-            para oferecer uma experiência incomparável. Focamos em você e nas suas necessidades, garantindo
-            disponibilidade contínua e eficiência operacional através de soluções personalizadas e centradas no cliente.
-            Com a VaultWise, você não apenas gerencia seus ATMs; você os potencializa. Descubra como nossa expertise
-            pode elevar a performance e a segurança das suas operações.
-          </div>
+  <div class="fundoequipe">
+    <div class="containerequipe">
+      <div class="titulo_equipe">
+        <h1>Conheça a equipe VaultWise</h1>
+        <div class="texto_equipe">
+          Nossa equipe é composta por seis sócios dedicados que combinam conhecimento profundo e tecnologia de ponta
+          para oferecer uma experiência incomparável. Focamos em você e nas suas necessidades, garantindo
+          disponibilidade contínua e eficiência operacional através de soluções personalizadas e centradas no cliente.
+          Com a VaultWise, você não apenas gerencia seus ATMs; você os potencializa. Descubra como nossa expertise
+          pode elevar a performance e a segurança das suas operações.
         </div>
+      </div>
+
+      <div class="containercard">
+        <div class="cardcointainer2">
+          <article class="cardarticle">
+            <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+
+            <div class="carddados">
+              <span class="carddescricao1">Cargo:</span>
+              <h2 class="titulocard1">Nome: Pessoa</h2>
+            </div>
+        </div>
+        </article>
 
         <div class="containercard">
           <div class="cardcointainer2">
             <article class="cardarticle">
-              <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+              <img src="css/imagens/fotoAnne.jpg" class="cardimagem">
 
               <div class="carddados">
-                <span class="carddescricao1">Cargo:</span>
-                <h2 class="titulocard1">Nome: Pessoa</h2>
+                <span class="carddescricao1">Cargo: Full Stack</span>
+                <h2 class="titulocard1">Nome: Anne Caroline</h2>
               </div>
           </div>
-          </article>
+
 
           <div class="containercard">
             <div class="cardcointainer2">
               <article class="cardarticle">
-                <img src="css/imagens/fotoroque.jpg" class="cardimagem">
+                <img src="css/imagens/diegofoto.png" class="cardimagem" data-cardo="Lucas Coltre Roque">>
 
                 <div class="carddados">
-                  <span class="carddescricao1">Cargo:</span>
-                  <h2 class="titulocard1">Nome: Pessoa</h2>
+                  <span class="carddescricao1">Cargo: Full Stack</span>
+                  <h2 class="titulocard1">Nome: Diego Campos</h2>
                 </div>
             </div>
 
@@ -158,11 +170,11 @@
             <div class="containercard">
               <div class="cardcointainer2">
                 <article class="cardarticle">
-                  <img src="css/imagens/diegofoto.png" class="cardimagem" data-cardo="Lucas Coltre Roque">>
+                  <img src="css/imagens/duarte.jpeg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
 
                   <div class="carddados">
                     <span class="carddescricao1">Cargo: Full Stack</span>
-                    <h2 class="titulocard1">Nome: Diego Campos</h2>
+                    <h2 class="titulocard1">Nome: Guilherme Duarte</h2>
                   </div>
               </div>
 
@@ -170,11 +182,11 @@
               <div class="containercard">
                 <div class="cardcointainer2">
                   <article class="cardarticle">
-                    <img src="css/imagens/duarte.jpeg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
+                    <img src="css/imagens/fotoroque.jpg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
 
                     <div class="carddados">
                       <span class="carddescricao1">Cargo: Full Stack</span>
-                      <h2 class="titulocard1">Nome: Guilherme Duarte</h2>
+                      <h2 class="titulocard1">Nome: Lucas Coltre Roque</h2>
                     </div>
                 </div>
 
@@ -182,33 +194,21 @@
                 <div class="containercard">
                   <div class="cardcointainer2">
                     <article class="cardarticle">
-                      <img src="css/imagens/fotoroque.jpg" class="cardimagem" data-cardo="Lucas Coltre Roque">>
+                      <img src="css/imagens/fotoPerfilAlexandre.jpg" class="cardimagem"
+                        data-cardo="Lucas Coltre Roque">>
 
                       <div class="carddados">
                         <span class="carddescricao1">Cargo: Full Stack</span>
-                        <h2 class="titulocard1">Nome: Lucas Coltre Roque</h2>
+                        <h2 class="titulocard1">Nome: Alexandre Vasconelos</h2>
                       </div>
                   </div>
-
-
-                  <div class="containercard">
-                    <div class="cardcointainer2">
-                      <article class="cardarticle">
-                        <img src="css/imagens/fotoPerfilAlexandre.jpg" class="cardimagem"
-                          data-cardo="Lucas Coltre Roque">>
-
-                        <div class="carddados">
-                          <span class="carddescricao1">Cargo: Full Stack</span>
-                          <h2 class="titulocard1">Nome: Alexandre Vasconelos</h2>
-                        </div>
-                    </div>
-                    </article>
-                  </div>
+                  </article>
                 </div>
               </div>
-
             </div>
+
           </div>
+        </div>
   </section>
 
   <section class="quatro">
@@ -220,7 +220,6 @@
           </div>
 
           <div class="box-container">
-
             <div class="box">
               <img src="css/imagens/icon4.png" alt="">
               <h3>Segurança</h3>
@@ -238,7 +237,6 @@
               <h3>Empenho</h3>
               <p>Utilizamos o foco total em todas as atividades realizadas para a melhor entrega possível</p>
             </div>
-
 
             <div class="box">
               <img src="css/imagens/icon7.png" alt="">
