--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -70,10 +70,10 @@
               <a href="CadastroEquipamentos.html" class="ativo">Home</a>
             </li>
             <li>
-              <a href="#sobre_nos">Sobre Nós</a>
+              <a href="CadastroEmpresa.html">Sobre Nós</a>
             </li>
             <li>
-              <a href="Login.html">Login</a>
+              <a href="CadastroFuncionario.html">Login</a>
             </li>
           </ul>
         </nav>
