--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -67,13 +67,13 @@
         <nav>
           <ul>
             <li>
-              <a href="CadastroEquipamentos.html" class="ativo">Home</a>
+              <a href="index.html" class="ativo">Home</a>
             </li>
             <li>
-              <a href="CadastroEmpresa.html">Sobre Nós</a>
+              <a href="sobre_nos.html">Sobre Nós</a>
             </li>
             <li>
-              <a href="CadastroFuncionario.html">Login</a>
+              <a href="Login.html">Login</a>
             </li>
           </ul>
         </nav>
