Alterando icon do site no navegador

--- a/Site Institucional/public/Login.html
+++ b/Site Institucional/public/Login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="imagex/png" href="css/imagens/logosemfundo.png">
     <title>Vault Wise - Faça seu login</title>
     <link rel="stylesheet" href="css/styleLogin.css">
     <script src="js/sessao.js"></script>
