--- a/Site Institucional/public/CadastroEmpresa.html
+++ b/Site Institucional/public/CadastroEmpresa.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault Wise - Crie sua conta</title>
     <link rel="stylesheet" href="css/styleCadastroEmpresa.css">
+  <link rel="shortcut icon" type="imagex/png" href="css/imagens/logosemfundo.png">
     <script src="js/sessao.js"></script>
 </head>
 <!-- <body onload="listar()"> -->
