--- a/Site Institucional/public/CadastroEquipamentos.html
+++ b/Site Institucional/public/CadastroEquipamentos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault Wise - Cadastro de Equipamentos</title>
     <link rel="stylesheet" href="css/styleCadastroEquipamento.css">
+  <link rel="shortcut icon" type="imagex/png" href="css/imagens/logosemfundo.png">
+
 </head>
 
 <body onload="listar()">
