--- a/Site Institucional/public/CadastroFuncionario.html
+++ b/Site Institucional/public/CadastroFuncionario.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault Wise - Crie sua conta</title>
     <link rel="stylesheet" href="css/styleCadastroFuncionario.css">
+    <link rel="shortcut icon" type="imagex/png" href="css/imagens/logosemfundo.png">
 </head>
 <body>
   <header>
